welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value biscuits
while ( 2 * biscuits != caseOrange + 1 ) { 
            ^RunHalf:10: error: value update is not a member of Boolean
	if (estSurOrange()= true) { 
            ^